fixes fixed layout issues with caviats

--- a/app/assets/stylesheets/neighborhoods.scss
+++ b/app/assets/stylesheets/neighborhoods.scss
@@ -8,9 +8,13 @@
 
 .right_bar {
   background: #aaaaaa;
-  height: 800px;
+  height: 100vh;
   position: fixed;
+  top: 0px;
+  bottom: 0px;
+  right: 0px;
   padding: 10px;
+  margin: 10px;
 }
 
 .alert_div {
